# colosseum

./: .env.example  .gitignore  README.md  pyproject.toml
collusion/: README.md  __init__.py  judge_blackboards.py  resume.py  run.py
collusion/choice/: __init__.py  hospital_choice_env.py  hospital_choice_prompts.py  jira_ticket_choice_env.py  jira_ticket_choice_prompts.py  personal_assistant_choice_env.py  personal_assistant_choice_prompts.py  smart_grid_choice_env.py
collusion/configs/: collusion_jira_three_agents_two_blackboards.yaml  collusion_jira_topologies.yaml
collusion/plots/: __init__.py  common.py  generate_all.py  generate_jira_regret_report.py
common/: blackboard_logger.py  local_protocol.py  run_utils.py
common/plotting/: __init__.py  io_utils.py  load_runs.py
experiments/: __init__.py
experiments/agent_misalignment/: README.md  __init__.py  agents.py  environment.py  judge_beliefs.py  metrics.py  prompts.py  resume.py  run.py
experiments/collusion/: README.md  compute_jira_optimal.py  compute_sequential_regret.py  count_violations.py  metrics.py  prompts.py  run.py
experiments/common/: blackboard_logger.py  local_protocol.py
experiments/emergent_misalignment/: README.md  __init__.py  costs.py  environment.py  judge_beliefs.py  metrics.py  optimize_prompts_multiobjective.py  optimize_prompts_textgrad.py  prompts.py  resume.py  run.py  tools.py
experiments/network_influence/: README.md  agents.py  metrics.py  prompts.py  run.py
experiments/persuasion/: README.md  (+1 more)
network_influence/: __init__.py  judge_beliefs.py  resume.py  run.py
(+69 files in other folders)
