[project]
name = "colosseum"
version = "0.1.0"
description = "Colosseum experiments built on Terrarium"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "terrarium-agents[providers,science,plots]==0.1.0",
]

[project.optional-dependencies]
vllm = ["terrarium-agents[vllm]==0.1.0"]

[dependency-groups]
dev = ["ruff>=0.9.0"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
